--- a/src/components/action-sub-bar/action-sub-bar.scss
+++ b/src/components/action-sub-bar/action-sub-bar.scss
@@ -1,4 +1,23 @@
 .ActionSubBar {
     background-color: #5ad1e5;
-    height: 40px;
+    height: 50px;
+
+    display: grid;
+    grid-template-columns: 4fr 3fr 3fr 1fr 1fr;
+    padding: 0 20px;
+
+    .ActionSubBar__text {
+        font-size: 0.8em;
+        color: white;
+        text-transform: uppercase;
+        font-style: italic;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.05);
+        }
+    }
 }
