add simple login and user data fetch

--- a/src/components/deployment/participants-table/participant-table-header/participants-table-header.scss
+++ b/src/components/deployment/participants-table/participant-table-header/participants-table-header.scss
@@ -1,6 +1,6 @@
-@import '../equipment-table.scss';
+@import '../participants-table';
 
-.EquipmentTableHeader {
+.ParticipantsTableHeader {
     th {
         padding: 10px;
         border-bottom: 1px solid #aaa;        
