--- a/src/components/deployment/participants-table/participant-table-row/participants-table-row.scss
+++ b/src/components/deployment/participants-table/participant-table-row/participants-table-row.scss
@@ -1,6 +1,6 @@
-@import '../equipment-table.scss';
+@import '../participants-table';
 
-.EquipmentTableRow {
+.ParticipantsTableRow {
     border-bottom: 1px solid #e6e6e6;
     font-size: 0.75em;
     color: #666;
