add custom table data component

--- a/src/Global.scss
+++ b/src/Global.scss
@@ -1,3 +1,5 @@
+$humanyze-blue: #5ad1e5;
+
 body {
   margin: 0;
   padding: 0;
@@ -6,7 +8,12 @@ body {
 
 a {
   text-decoration: none;
+  color: inherit;
   &:active, &:visited {
       color: inherit;
    }
+  &:hover {
+    color: $humanyze-blue;
+  }
 }
+
