--- a/src/components/action-sub-bar/action-sub-bar.scss
+++ b/src/components/action-sub-bar/action-sub-bar.scss
@@ -1,5 +1,7 @@
+@import 'Src/Global.scss';
+
 .ActionSubBar {
-    background-color: #5ad1e5;
+    background-color: $humanyze-blue;
     height: 50px;
 
     display: grid;
