--- a/src/components/deployment/deployment-overview/participants-table/participants-table.scss
+++ b/src/components/deployment/deployment-overview/participants-table/participants-table.scss
@@ -1,9 +1,11 @@
+@import 'Src/Global.scss';
+
 .ParticipantsTable {
     padding: 40px;
 }
 
 .ParticipantsTable__title {
-    background-color: #5ad1e5;
+    background-color: $humanyze-blue;
     font-size: 2em;
     color: white;
     padding: 10px 30px;
