--- a/src/components/common/user-avatar/user-avatar.scss
+++ b/src/components/common/user-avatar/user-avatar.scss
@@ -1,43 +1,59 @@
+
 .UserAvatar {
-    display: flex;
+  display: flex;
 }
 
 .UserAvatar__email {
-    display: flex;
-    align-items: center;
-    padding-right: 20px;
-    font-size: 0.9em;
-    color: rgba(0,0,0, 0.4);
+  display: flex;
+  align-items: center;
+  padding-right: 20px;
+  font-size: 0.8em;
+  color: rgba(0, 0, 0, 0.7);
 }
-
 
 .UserAvatar__dropdown-wrapper {
-    position: relative;
+  position: relative;
 }
 
-
 .UserAvatar__image {
-    background-color: #aaa;
-    border-radius: 50%;
-    padding: 15px;
-    cursor: pointer;
+  background-color: #aaa;
+  border-radius: 50%;
+  padding: 15px;
+  cursor: pointer;
 
-    &:hover, &.active {
-        background-color: rgba(50, 50, 240, 0.4);
-    }
+  &:hover, &.active {
+    background-color: rgba(50, 50, 240, 0.4);
+  }
 }
 
 .UserAvatar__dropdown {
-    position: absolute;
-    right: 0;
+  position: absolute;
+  right: 0;
+  margin: 5px 0 10px 10px;
+  border: 1px solid #e6e6e6;
+  font-size: 0.9em;
+  padding: 10px;
+  max-width: 200px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
 
-    * {
-        padding: 5px 10px;
-        background-color: #ccc;
+.UserAvatar__dropdown-body a {
+  display: block;
+  white-space: nowrap;
+  padding: 5px;
+}
 
-        &:hover {
-            cursor: pointer;
-            background-color: #ddd;            
-        }
-    }
+.UserAvatar__dropdown-divider {
+  height: 0;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.UserAvatar__dropdown-version-text {
+  font-size: 0.75em;
+  color: rgba(0, 0, 0, 0.4);
+  margin-top: 10px;
+  text-align: center;
+  font-style: italic;
 }
