--- a/src/Global.scss
+++ b/src/Global.scss
@@ -6,7 +6,7 @@ $humanyze-blue: #5ad1e5;
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Lato, Arial, sans-serif;
 }
 
 a {
