--- a/src/components/common/user-avatar/user-avatar.scss
+++ b/src/components/common/user-avatar/user-avatar.scss
@@ -16,14 +16,9 @@
   position: relative;
 }
 
-.UserAvatar__image {
-  background-color: #aaa;
-  border-radius: 50%;
-  padding: 15px;
-  cursor: pointer;
-
-  &:hover, &.active {
-    background-color: rgba(50, 50, 240, 0.4);
+.UserAvatar__avatar-icon {
+  .material-icons {
+    cursor: pointer;
   }
 }
 
