--- a/src/components/common/pagination/pagination.scss
+++ b/src/components/common/pagination/pagination.scss
@@ -1,12 +1,18 @@
 .Pagination {
   display: flex;
-  & > *  {
+  & > div {
     padding: 10px;
     &:hover {
       background-color: rgba(0, 0, 0, 0.05);
     }
     &.active {
       background-color: rgba(0, 0, 200, 0.1);
+    }
+  }
+  .Pagination__button {
+    &.disabled {
+      opacity: 0.5;
+      pointer-events: none;
     }
   }
 }
