--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,5 +1,5 @@
 // global
-@import '../../node_modules/normalize-scss/sass/normalize';
+@import '../../../node_modules/normalize-scss/sass/normalize';
 
 // in-repo-addons
 @import 'humanyze-ui';
