--- a/src/Global.scss
+++ b/src/Global.scss
@@ -1,12 +1,14 @@
-//@import './styles/app.scss';
+@import './assets/scss/app.scss';
 // once humanyze library is figured out
-
-$humanyze-blue: #5ad1e5;
 
 body {
   margin: 0;
   padding: 0;
   font-family: Lato, Arial, sans-serif;
+}
+
+div {
+  position: relative;
 }
 
 a {
