--- a/src/components/deployment/deployment-overview/participants-table/participants-table.scss
+++ b/src/components/deployment/deployment-overview/participants-table/participants-table.scss
@@ -29,6 +29,9 @@
 
     td {
         min-width: 250px;
+        max-width: 100%;
+        white-space: nowrap;
+        overflow: visible;
     }
 }
 
