--- a/src/components/deployment/deployment-overview/action-sub-bar/action-sub-bar.scss
+++ b/src/components/deployment/deployment-overview/action-sub-bar/action-sub-bar.scss
@@ -1,7 +1,7 @@
 @import '~Src/Global.scss';
 
 .ActionSubBar {
-    background-color: $humanyze-blue;
+    background-color: $blue-3;
     height: 50px;
     padding: 0 20px;
     display: flex;
@@ -14,10 +14,9 @@
 
 
     .ActionSubBar__text {
-        font-size: 0.8em;
+        font-size: 12px;
         color: white;
         text-transform: uppercase;
-        font-style: italic;
         display: flex;
         align-items: center;
         cursor: pointer;
@@ -26,6 +25,10 @@
         &:hover {
             background-color: rgba(0, 0, 0, 0.05);
             color: white;
+        }
+
+        &.ActionSubBar__description {
+            font-style: italic;
         }
     }
 }
