remove class usage for modal components for consistency

--- a/src/components/deployment/deployment-overview/participants-table/participant-table-header/participants-table-header.scss
+++ b/src/components/deployment/deployment-overview/participants-table/participant-table-header/participants-table-header.scss
@@ -1,6 +1,6 @@
 .ParticipantsTableHeader {
     .ParticipantsTableHeader__column-header {
-        padding: 10px;
+        padding: 10px 20px;
         border-bottom: 2px solid #aaa;
         text-align: left;
         text-transform: capitalize;
