--- a/src/components/deployment/deployment-overview/participants-table/participants-table.scss
+++ b/src/components/deployment/deployment-overview/participants-table/participants-table.scss
@@ -18,7 +18,7 @@
 
 .ParticipantsTable__table-padding {
     padding: 40px 40px 20px;
-    background-color: #f5f5f5;
+    background-color: $grey-2;
 }
 .ParticipantsTable__table-wrapper {
     overflow-x: scroll;
