--- a/src/components/deployment/deployment-selection/deployment-selection-item/deployment-selection-item.scss
+++ b/src/components/deployment/deployment-selection/deployment-selection-item/deployment-selection-item.scss
@@ -5,14 +5,17 @@
   padding: 10px;
   border: 1px solid #ebebeb;
   border-radius: 2px;
+  line-height: 1.15;
 
-  font-size: 0.9em;
   color: #676767;
   &:hover {
     color: #25b3d5;
   }
-}
 
-.DeploymentSelectionItem__name {
-
+  &:first-child {
+    margin-top: 0;
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
