--- a/src/components/deployment/deployment-selection/deployment-selection.scss
+++ b/src/components/deployment/deployment-selection/deployment-selection.scss
@@ -1,3 +1,5 @@
+@import '~Src/Global.scss';
+
 .DeploymentSelection__wrapper {
   padding-top: 40px;
   display: flex;
@@ -5,18 +7,19 @@
 }
 
 .DeploymentSelection {
-  width: 320px;
+  width: 360px;
   display: flex;
   flex-direction: column;
   margin: 10px 15px;
   padding: 20px;
-  background-color: #f5f5f5;
+  background-color: $grey-2;
   color: #676767;
   border-radius: 2px;
 }
 
 .DeploymentSelection__header {
-  padding: 10px 0;
+  height: 60px;
+  font-weight: bold;
 }
 
 .DeploymentSelection__loading-background {
