--- a/src/components/deployment/deployment-overview/participants-table/participant-table-header/participants-table-header.scss
+++ b/src/components/deployment/deployment-overview/participants-table/participant-table-header/participants-table-header.scss
@@ -1,7 +1,9 @@
 .ParticipantsTableHeader {
     .ParticipantsTableHeader__column-header {
         padding: 10px 20px;
-        border-bottom: 2px solid #aaa;
+        font-size: 14px;
+        background-color: #e5e5e5;
+        border-right: 1px solid #f5f5f5;
         text-align: left;
         text-transform: capitalize;
     }
