--- a/src/components/deployment/deployment-overview/participants-table/participants-table.scss
+++ b/src/components/deployment/deployment-overview/participants-table/participants-table.scss
@@ -32,7 +32,7 @@
     width: 100%;
     border-spacing: 0;
 
-    td {
+    td, th {
         min-width: 200px;
         max-width: 100%;
         white-space: nowrap;
