switch error bar color to use humanyze-ui library

--- a/src/components/error-manager/error-flash-bar/error-flash-bar.scss
+++ b/src/components/error-manager/error-flash-bar/error-flash-bar.scss
@@ -9,9 +9,7 @@
 
 
 .ErrorFlashBar {
-  // todo: add back in once pull in develop
-  //background-color: $error-red;
-  background-color: red;
+  background-color: $error-red;
   display: flex;
   align-items: center;
   justify-content: space-between;
