--- a/src/components/modal/model-components/LightBoxWrapper/light-box-wrapper.scss
+++ b/src/components/modal/model-components/LightBoxWrapper/light-box-wrapper.scss
@@ -6,16 +6,14 @@
   right: 0;
 
   z-index: 100;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(51,51,51,.77);
 }
 
 .LightBox {
   display: grid;
   height: 100%;
 
-  > div {
+  & > div {
     margin: auto;
-    background-color: white;
-    padding: 20px;
   }
 }
