--- a/src/components/common/date-selector/date-selector.scss
+++ b/src/components/common/date-selector/date-selector.scss
@@ -5,8 +5,6 @@
   width: 150px;
   height: 48px;
   cursor: pointer;
-  padding-left: 15px;
-  padding-right: 10px;
   margin-left: 10px;
   background-color: #fff;
   border: 1px solid #ebebeb;
@@ -36,6 +34,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  user-select: none;
+  padding-left: 15px;
+  padding-right: 10px;
 
   i {
     margin-top: 4px;
@@ -43,10 +44,14 @@
 }
 
 .react-datepicker-popper {
-  margin-top: 0 !important;
+  //margin-top: 0 !important;
 }
 
 .react-datepicker {
+  box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.16), 0 6px 6px rgba(0, 0, 0, 0.20);
+  border: none;
+  border-radius: 0;
+
   .react-datepicker__triangle {
     display: none;
   }
@@ -56,19 +61,50 @@
     border: none;
   }
 
-  //.react-datepicker__day {
-  //  box-sizing: border-box;
-  //  padding: 2px 4px;
-  //}
-
-  .react-datepicker__day--selected {
-    background-color: $grey-3a;
-    color: black;
+  .react-datepicker__current-month {
+    font-weight: 300;
   }
+  .react-datepicker__navigation {
+    margin-top: 3px;
+  }
+
+  .react-datepicker__day-name, .react-datepicker__day {
+    width: 35px;
+    height: 35px;
+    vertical-align: center;
+    line-height: 35px;
+  }
+
+  .react-datepicker__day-name {
+    font-weight: 300;
+  }
+
+
+  .react-datepicker__day {
+    border-radius: 50%;
+    font-size: 12px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-align: right;
+  }
+
+  .react-datepicker__day--outside-month {
+    opacity: 0.5;
+  }
+
+
 
   .react-datepicker__day--today {
     background-color: transparent;
     color: inherit;
     font-weight: inherit;
+    &:hover {
+      background-color: $grey-3a;
+    }
+  }
+  .react-datepicker__day--selected {
+    background-color: $humanyze-blue;
+    color: white;
   }
 }
