--- a/src/components/modal/modal-components/import-participant-data/import-participant-data-modal.scss
+++ b/src/components/modal/modal-components/import-participant-data/import-participant-data-modal.scss
@@ -8,6 +8,10 @@
   width: 700px;
   display: flex;
   flex-direction: column;
+
+  &.ImportParticipantDataModal__requesting-validation {
+
+  }
 }
 
 
@@ -64,6 +68,20 @@
   display: flex;
   font-size: 14px;
   color: $grey-6;
+}
+
+.ValidationError {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .ValidationError__download-text {
+    cursor: pointer;
+    color: black;
+    margin-left: 7px;
+  }
 }
 
 .ImportParticipantDataModal__footer-section {
