--- a/src/components/modal/modal-components/import-participant-data/import-participant-data-modal.scss
+++ b/src/components/modal/modal-components/import-participant-data/import-participant-data-modal.scss
@@ -84,6 +84,15 @@
   }
 }
 
+.ValidationSuccessMessage {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .ImportParticipantDataModal__footer-section {
   margin: 10px;
   color: #aaaaaa;
