--- a/src/components/modal/modal-components/import-participant-data/import-participant-data-modal.scss
+++ b/src/components/modal/modal-components/import-participant-data/import-participant-data-modal.scss
@@ -13,7 +13,7 @@
 
   }
 
-  &.validating, &.importing {
+  &.validating, &.importing, &.importComplete {
     .FileUploadSelector, .DateSelector, .ActionButton__validate, .ActionButton__import  {
       pointer-events: none;
       opacity: 0.7;
@@ -77,6 +77,9 @@
   display: flex;
   font-size: 14px;
   color: $grey-6;
+  & > div {
+    flex: 1;
+  }
 }
 
 .ValidationError {
@@ -92,6 +95,16 @@
     margin-left: 7px;
   }
 }
+
+.ImportTooLongMessage {
+  display: flex;
+  align-items: center;
+  .ImportTooLongMessage__cancel {
+    cursor: pointer;
+    color: black;
+  }
+}
+
 
 .ValidationSuccessMessage {
   width: 100%;
