add storybook files, rename to fit file name conventions

--- a/src/components/modal/modal-components/import-participant-data/action-button/action-button.scss
+++ b/src/components/modal/modal-components/import-participant-data/action-button/action-button.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   height: 34px;
-  width: 86px;
+  min-width: 86px;
   padding: 6px 14px;
   margin-left: 10px;
   background-color: $grey-3;
