--- a/src/components/common/file-upload-selector/file-upload-selector.scss
+++ b/src/components/common/file-upload-selector/file-upload-selector.scss
@@ -28,8 +28,14 @@
     justify-content: space-between;
     align-items: center;
 
+    .FileUploadSelector__file-name {
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+      padding-right: 20px;
+    }
     .material-icons {
       color: $grey-5;
+      flex-basis: 18px;
     }
 
   }
