add exporting styles for participant export

--- a/src/components/deployment/deployment-overview/action-sub-bar/action-sub-bar.scss
+++ b/src/components/deployment/deployment-overview/action-sub-bar/action-sub-bar.scss
@@ -32,5 +32,11 @@
             font-style: italic;
             cursor: default;
         }
+        &.ActionSubBar__text--exporting {
+            cursor: default;
+            &:hover {
+                background-color: transparent;
+            }
+        }
     }
 }
