add wrapper for error stacking

--- a/src/components/modal/modal-components/import-participant-data/import-participant-data-modal.scss
+++ b/src/components/modal/modal-components/import-participant-data/import-participant-data-modal.scss
@@ -84,6 +84,11 @@
   }
 }
 
+.ValidationError__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .ValidationError {
   height: 100%;
   width: 100%;
