add screen size change allowance on adjacencies, remove two column dropdown hack

--- a/src/components/digital/dashboards/digital.scss
+++ b/src/components/digital/dashboards/digital.scss
@@ -4,9 +4,16 @@
   height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
+  $Digital: &;
 
   & > * {
     flex-shrink: 0;
+  }
+
+ .DataVisAdjacencies {
+    @at-root #{$Digital} {
+      height: 800px;
+    }
   }
 
 }
