--- a/src/components/digital/dashboards/digital-filter-routes/adjacencies-filters/adjacencies-receiver-filter.scss
+++ b/src/components/digital/dashboards/digital-filter-routes/adjacencies-filters/adjacencies-receiver-filter.scss
@@ -2,73 +2,73 @@
 
 .AdjacenciesReceiverFilterWrapper {
   // used to create the `one box` appearance
-  .DropdownSelector__input-label-wrapper {
-    position: relative;
-    z-index: 1;
-  }
+  // .DropdownSelector__input-label-wrapper {
+  //   position: relative;
+  //   z-index: 1;
+  // }
 
-  .DropdownSelector__input {
-    width: auto;
-    display: flex;
-    align-items: center;
-    position: relative;
+  // .DropdownSelector__input {
+  //   width: auto;
+  //   display: flex;
+  //   align-items: center;
+  //   position: relative;
 
-    .DropdownSelector__input-value {
-      max-width: 110px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
+  //   .DropdownSelector__input-value {
+  //     max-width: 110px;
+  //     overflow: hidden;
+  //     white-space: nowrap;
+  //     text-overflow: ellipsis;
+  //   }
 
-    &.DropdownSelector__input--active {
-      border-color: $grey-eb;
-      border-bottom-color: transparent;
-      box-shadow: 1px -1px 2px rgba(0, 0, 0, 0.03);
-      border-bottom-left-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-  }
+  //   &.DropdownSelector__input--active {
+  //     border-color: $grey-eb;
+  //     border-bottom-color: transparent;
+  //     box-shadow: 1px -1px 2px rgba(0, 0, 0, 0.03);
+  //     border-bottom-left-radius: 0;
+  //     border-bottom-right-radius: 0;
+  //   }
+  // }
 
-  .DropdownSelector__dropdown-modal {
-    position: absolute;
-    left: 50px;
-    right: -100px;
-    max-width: 220px;
-    margin: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  // .DropdownSelector__dropdown-modal {
+  //   position: absolute;
+  //   left: 50px;
+  //   right: -100px;
+  //   max-width: 220px;
+  //   margin: 0;
+  //   display: grid;
+  //   grid-template-columns: 1fr 1fr;
 
-    box-shadow: 2px 1px 5px 1px rgba(0, 0, 0, 0.05),
-      -2px 1px 5px 1px rgba(0, 0, 0, 0.05), 3px 3px 3px rgba(0, 0, 0, 0.1),
-      -3px 3px 3px rgba(0, 0, 0, 0.05);
+  //   box-shadow: 2px 1px 5px 1px rgba(0, 0, 0, 0.05),
+  //     -2px 1px 5px 1px rgba(0, 0, 0, 0.05), 3px 3px 3px rgba(0, 0, 0, 0.1),
+  //     -3px 3px 3px rgba(0, 0, 0, 0.05);
 
-    border-radius: 2px;
+  //   border-radius: 2px;
 
-    // keep these two the same plz
-    padding: 10px 20px;
-    grid-gap: 20px;
-    // thx u
+  //   // keep these two the same plz
+  //   padding: 10px 20px;
+  //   grid-gap: 20px;
+  //   // thx u
 
-    .DropdownSelector__dropdown-item {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+  //   .DropdownSelector__dropdown-item {
+  //     display: flex;
+  //     justify-content: center;
+  //     align-items: center;
 
-      width: auto;
-      min-width: 0;
-      height: auto;
-      padding: 5px 10px;
-      overflow-x: hidden;
+  //     width: auto;
+  //     min-width: 0;
+  //     height: auto;
+  //     padding: 5px 10px;
+  //     overflow-x: hidden;
 
-      font-weight: normal;
-      text-transform: capitalize;
-      text-align: center;
+  //     font-weight: normal;
+  //     text-transform: capitalize;
+  //     text-align: center;
 
-      &:hover {
-        background-color: $humanyze-blue;
-        color: white;
-        border-radius: 5px;
-      }
-    }
-  }
+  //     &:hover {
+  //       background-color: $humanyze-blue;
+  //       color: white;
+  //       border-radius: 5px;
+  //     }
+  //   }
+  // }
 }
