--- a/src/components/digital/dashboards/digital.scss
+++ b/src/components/digital/dashboards/digital.scss
@@ -2,6 +2,7 @@
 
 .Digital {
   height: calc(100vh - 60px);
+  min-height: 800px; // scroll only on small screen sizes
   display: flex;
   flex-direction: column;
   $Digital: &;
@@ -9,13 +10,6 @@
   & > * {
     flex-shrink: 0;
   }
-
- .DataVisAdjacencies {
-    @at-root #{$Digital} {
-      min-height: 800px;
-    }
-  }
-
 }
 
 .Digital__grid {
