add fix for responsiveness in filter bar

--- a/src/components/digital/dashboards/digital-filter-routes/adjacencies-filters/adjacencies-receiver-filter.scss
+++ b/src/components/digital/dashboards/digital-filter-routes/adjacencies-filters/adjacencies-receiver-filter.scss
@@ -1,6 +1,12 @@
 @import "~Src/Global.scss";
 
 .AdjacenciesReceiverFilterWrapper {
+  @media screen and (max-width: 1300px) {
+    max-width: 200px;
+    .DropdownSelector__input {
+      // max-width: 200px;
+    }
+  }
   // used to create the `one box` appearance
   // .DropdownSelector__input-label-wrapper {
   //   position: relative;
