--- a/src/components/digital/dashboards/digital-filter-routes/adjacencies-filters/adjacencies-receiver-filter.scss
+++ b/src/components/digital/dashboards/digital-filter-routes/adjacencies-filters/adjacencies-receiver-filter.scss
@@ -7,6 +7,7 @@
       // max-width: 200px;
     }
   }
+  // NOTE: leaving comments for the 2 column styling in case we wish to add this styling back in
   // used to create the `one box` appearance
   // .DropdownSelector__input-label-wrapper {
   //   position: relative;
