start using common components for style, remove assets and merged to common submodule, upgrade d3

--- a/src/Global.scss
+++ b/src/Global.scss
@@ -2,7 +2,7 @@
 @import '../node_modules/normalize-scss/sass/normalize';
 
 // in-repo-addons
-@import './assets/scss/humanyze-ui/humanyze-ui';
+@import './elements-web-common/assets/scss/humanyze-ui//humanyze-ui.scss';
 
 // TODO: move this legacy stuff and remove as much as possible
 
