--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,7 +2,7 @@
 @import '../../../node_modules/normalize-scss/sass/normalize';
 
 // in-repo-addons
-@import './humanyze-ui/humanyze-ui.scss';
+@import '../../elements-web-common/assets/scss/humanyze-ui/humanyze-ui.scss';
 
 // sass variables & mixins
 @import 'variables';
